# ds-projen

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run
.github/workflow/: ci-cd-ds-projen.yaml
.github/workflows/: ci-cd-ds-projen.yaml
domains/reference/dummy-project/src/dummy_project/: __init__.py
src/ds_projen/: __init__.py
src/ds_projen/components/: __init__.py  flow.py  lazy_sample_file.py  path_utils.py  pyproject_toml.py  readme.py
src/ds_projen/components/metaflow_project/: ci_cd_github_actions_workflow.py  consts.py  metaflow_flow.py  metaflow_project.py
src/ds_projen/projects/ds_project/: project.py
src/ds_projen/projects/repository/: gitignore.py  project.py  repository.py
src/ds_projen/samples/python_tests/: __init__.py  sample.py
src/ds_projen/samples/python_tests/templates/tests/: conftest.py  consts.py
src/ds_projen/samples/python_tests/templates/tests/fixtures/: general_fixtures.py
src/ds_projen/samples/python_tests/templates/tests/functional_tests/: __init__.py
src/ds_projen/samples/python_tests/templates/tests/unit_tests/: __init__.py  test__sample.py
tests/: __init__.py  conftest.py  consts.py
tests/artifacts/tmpnvaj6qgi/dummy-repo/domains/reference/dummy-project/: pyproject.toml
tests/fixtures/: artifacts_dir.py
tests/functional_tests/components/metaflow_project/: test__metaflow_project.py
tests/unit_tests/: __init__.py
tests/unit_tests/components/metaflow_project/: test__metaflow_flow.py  test__metaflow_project_.py
