[project]
name = "ds-projen"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "avr2002", email = "avr13405@gmail.com" },
    { name = "Eric Riddoch", email = "eric.riddoch@gmail.com" },
]
requires-python = ">=3.9"
dependencies = [
    "jinja2>=3.1.6",
    "projen>=0.91.20",
    # added because Python does not have a built-in way to write toml;
    # important for the pyproject.toml class
    "tomlkit>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# https://github.com/astral-sh/ruff?tab=readme-ov-file#configuration
[tool.ruff]
line-length = 119

# https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
extend-select = [
    # pycodestyle errors
    "E",
    # flake8-bugbear
    "B",
    # pylint equivalent rules
    "PL",
    # isort
    "I",
    # pydocstyle for docstrings
    "D",
    # pep8-naming
    "N",
]

ignore = [
    "D107",     # Missing docstring in `__init__`
    "E501",     # Line too long
    "D100",     # Missing docstring in public module
    "D104",     # Missing docstring in public package
    "D103",     # Missing docstring in public function
    # Magic value used in comparison, consider replacing `4` with a constant variable -- Is problem for tests
    "PLR2004",
    # `with` statement variable `tmp_dir` overwritten by assignment target, eg: tests/unit_tests/components/metaflow_project/test__metaflow_project_.py:17:9
    "PLW2901",
]

# https://docs.astral.sh/ruff/rules/#mccabe-c90
[tool.ruff.lint.mccabe]
max-complexity = 10

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "rich>=14.0.0",
    "ruff>=0.9.6",
    "pytest>=8.3.5",
    "pytest-cov",
    "pyyaml>=6.0.2",
]


[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
pythonpath = ["."]
addopts = [
    "--cov=src",
    "--junitxml=test-reports/report.xml",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-report=term",
]
# IGNORE tests/artifacts dir while running tests to avoid this error:
# ERROR - Defining 'pytest_plugins' in a non-top-level conftest is no longer supported:
# https://docs.pytest.org/en/stable/deprecations.html#pytest-plugins-in-non-top-level-conftest-files
# https://docs.pytest.org/en/7.1.x/reference/reference.html#confval-norecursedirs
norecursedirs = ["tests/artifacts"]

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "if False",
    "def __repr__",
    "if self.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "raise MemoryError",
    "except DistributionNotFound",
    "except ImportError",
    "@abc.abstractmethod",
    "if 0:",
    "if __name__ == .__main__.:",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
]
omit = ["tests/artifacts/*"]
show_missing = true

[tool.coverage.run]
branch = true

[tool.coverage.xml]
output = "test-reports/coverage.xml"

[tool.coverage.html]
directory = "test-reports/htmlcov"

[tool.coverage.json]
output = "test-reports/coverage.json"

[tool.poe.tasks.lint]
cmd = "pre-commit run --all-files"
help = "Run linting, formatting, projen synth, and other static code quality tools"

[tool.poe.tasks.test]
cmd = "pytest tests"
help = "Run all tests with optional additional arguments"


[tool.poe.tasks.serve-coverage-report]
help = "Serve the coverage report on http://localhost:3333"
shell = """
echo "Serving coverage report on http://localhost:3333"
echo "Press Ctrl+C to stop the server"

python -m http.server 3333 --directory ./test-reports/htmlcov
"""

[tool.poe.tasks.clean]
help = "Remove all files generated by tests, builds, or operating this codebase"
shell = """
rm -rf dist build coverage.xml test-reports sample/

find . \\
    -type d \\
    \\( \\
    -name "*cache*" \\
    -o -name "*.dist-info" \\
    -o -name "*.egg-info" \\
    -o -name "*htmlcov" \\
    -o -name "*.metaflow" \\
    -o -name "*.metaflow.s3" \\
    -o -name "*.mypy_cache" \\
    -o -name "*.pytest_cache" \\
    -o -name "*.ruff_cache" \\
    -o -name "*__pycache__" \\
    \\) \\
    -not -path "*env/*" \\
    -exec rm -r {} + || true

find . \\
    -type f \\
    -name "*.pyc" \\
    -o -name "*.DS_Store" \\
    -o -name "*.coverage" \\
    -not -path "*env/*" \\
    -exec rm {} +
"""
